# trading-journal

./: .gitignore  README.md
backend/: alembic.ini  database.db  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10ba7df0ad2e_inital_migration.py  114a381ed81b_inital_migration.py  12afc45f40af_add_trade_idea_model.py  26e898071fb3_rename_type_to_annotation_type.py  5f157586db8e_inital_migration.py  778328b9c311_inital_migration.py  a2a46dc373c0_initial_migration.py  a367a86aa907_inital.py  c364d0468466_inital.py  c956b779e0b2_inital_migration.py  f7d1998a730b_add_on_delete_cascade_to_annotation_.py  fd8bcc453289_inital.py
backend/core/: base_repo.py
backend/core/stock_price/: finnhub_schema.py  finnhub_service.py  stock_price_schema.py  stock_price_service.py
backend/database/: db.py  mixins.py  models.py  session.py
backend/domain/annotation/: annotation_deps.py  annotation_repo.py  annotation_router.py  annotation_schema.py  annotation_service.py
backend/domain/execution/: execution_deps.py  execution_repo.py  execution_router.py  execution_schema.py  execution_service.py
backend/domain/live_trade/: live_trade_deps.py  live_trade_repo.py  live_trade_router.py  live_trade_schema.py  live_trade_service.py
backend/domain/scale_plan/: scale_plan_deps.py  scale_plan_repo.py  scale_plan_router.py  scale_plan_schema.py  scale_plan_service.py
backend/domain/trade/: trade_deps.py  trade_repo.py  trade_router.py  trade_schema.py  trade_service.py
backend/domain/trade_idea/: trade_idea_deps.py  trade_idea_repo.py  (+3 more)
(+164 files in other folders)
