[tool.poetry]
name = "trading_journal_backend"
version = "0.1.0"
description = "Backend for Trading Journal"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
